# midi-music-generator

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml
generative_music/: __init__.py
generative_music/config/: dataset.yml  model.yml
generative_music/domain/: __init__.py
generative_music/domain/dataset_preparation/: __init__.py  batch_gererator.py  data_augmented_param_generator.py  dataset_preparer.py  dataset_splitter.py
generative_music/domain/inference/: __init__.py  generation_parameters.py  id2event_converter.py  sampler.py
generative_music/domain/midi_data_processor/: __init__.py  chord_extractor.py  config.py  data_elements.py  data_loader.py  dataset_splitter.py  item2event_converter.py
generative_music/domain/model/: __init__.py
generative_music/domain/train/: __init__.py  epoch_steps_calculator.py  losses.py  metrics.py  train_data_loader.py  train_step.py
generative_music/infrastructure/: __init__.py
generative_music/infrastructure/model_storage/: __init__.py  checkpoint_manager.py
generative_music/infrastructure/tensorboard/: __init__.py  tensorboard_writer.py
generative_music/infrastructure/tfrecords/: __init__.py  midi_tfrecords_reader.py  midi_tfrecords_writer.py
generative_music/service/: __init__.py  dataset_service.py  inference_service.py  midi_mapping_service.py  train_service.py
tests/: __init__.py
tests/domain/: __init__.py  conftest.py
tests/domain/dataset_preparation/: __init__.py  test_batch_generator.py  test_data_augmented_param_generator.py  (+2 more)
tests/infrastructure/: __init__.py
(+114 files in other folders)
